[package]
name = "hal_pwm_f7"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.71", default-features = false }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"
fugit = "0.3.7"

[dependencies.stm32f7xx-hal]
git = "https://github.com/stm32-rs/stm32f7xx-hal.git"
features = ["stm32f767", "rt"]
